--- a/index.html
+++ b/index.html
@@ -8,125 +8,153 @@
     <meta name="keywords" content="Vitaliy, resume">
     <meta name="description" content="Это сайт - резюме Виталия Гришанова">
     <title>Виталий резюме</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <div class="container">
+        <div class="info">
 
-    <img src="imgs/IMG_0072.jpg" width="250px" alt="Виталий Гришанов">
+            <img src="imgs/IMG_0072.jpg" alt="Виталий Гришанов" class="img">
 
-    <h1>Гришанов Виталий</h1>
+            <div class="info-text">
 
-    <p>Мне <strong>44 года</strong>. Имею высшее образовании по специальности «Строительство дорог и транспортных
-        объектов».
-        <br>
-        Работаю в КПРСУП«Гомельоблдорстрой» Добрушском ДРСУ-150.
-    </p>
+                <h1>Гришанов Виталий</h1>
 
-    <p>Я люблю путешествоать.
-        С октября 2021 года изучаю профессию <strong> <em>программиста</em></strong>.</p>
+                <br>
 
-    <h2>Список социальных сетей:</h2>
+                <p>Мне <strong>44 года</strong>. Имею высшее образовании по специальности «Строительство дорог и
+                    транспортных
+                    объектов».
+                    <br>
+                    Работаю в КПРСУП«Гомельоблдорстрой» Добрушском ДРСУ-150.
+                </p>
 
-    <a href="https://t.me/+5TGSpc5nj-IyZGMy" target="blank">Telegram |</a>
-    <a href="https://vk.com" target="blank">VK</a>
+                <p>Я люблю путешествовать.
+                    С октября 2021 года изучаю профессию <strong> <em>программиста</em></strong>.</p>
 
-    <h2>Мои хобби:</h2>
+                <br>
 
-    <ol>
-        <li>Путешествие</li>
-        <li>Фильмы о ВОВ</li>
-        <li>Стройка</li>
-    </ol>
+                <h4>Список социальных сетей:</h4>
 
-    <h2>Опыт работы</h2>
+                <br>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Название</th>
-                <th>Должность</th>
-                <th>Год</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>БНТУ ЦНИИДСГМ</td>
-                <td>Младший научный сотрудник</td>
-                <td>2000 - 2003</td>
-            </tr>
-            <tr>
-                <td>БНТУ ЦНИИДСГМ</td>
-                <td>Инженер технического надзора в дорожно – мостовом строительстве </td>
-                <td>2003 - 2008</td>
-            </tr>
-            <tr>
-                <td>БНТУ</td>
-                <td>Преподаватель каф. «Проектирования дорог» (программный модуль Credo).</td>
-                <td>2000 - 2004</td>
-            </tr>
-            <tr>
-                <td>УДМС и Б Мингорисполкома</td>
-                <td>Главный технолог</td>
-                <td>2004 - 2005</td>
-            </tr>
-            <tr>
-                <td>ООО "ПроплексБел"</td>
-                <td>Зам. дир. по комерчиским вопросам</td>
-                <td>2005 - 2006</td>
-            </tr>
-            <tr>
-                <td>ООО "Систехпром"</td>
-                <td>Зам. дир. по комерчиским вопросам</td>
-                <td>2006 - 2009</td>
-            </tr>
-            <tr>
-                <td>ОАО "ДСТ - 2 г.Гомель"</td>
-                <td>Начальник проектносметного отдела</td>
-                <td>2010 - 2014</td>
-            </tr>
-            <tr>
-                <td>ГДСК</td>
-                <td>Зам. директора по производству</td>
-                <td>2015 - 2016</td>
-            </tr>
-            <tr>
-                <td>КПРСУП Добрушское ДРСУ-150</td>
-                <td>Главный инженер</td>
-                <td>2016 - сейчас</td>
-            </tr>
-
-        </tbody>
-    </table>
-
-    <h2>Связаться со мной</h2>
-
-    <form>
-        <div>
-            <label for="name">Ваше имя:</label>
-            <input type="text" id="name" placeholder="Введите имя">
+                <a href="https://t.me/+5TGSpc5nj-IyZGMy" target="blank">Telegram |</a>
+                <a href="https://vk.com" target="blank">VK</a>
+            </div>
         </div>
 
-        <br>
+        <div class="card bg_green">
+            <h2>Мои хобби:</h2>
 
-        <div>
-            <label for="email">Ваш email:</label>
-            <input type="email" id="email" placeholder="Введите email">
+            <ol class="list">
+                <li>Путешествие</li>
+                <li>Фильмы о ВОВ</li>
+                <li>Стройка</li>
+            </ol>
         </div>
 
-        <br>
+        <div class="card bg_blue">
+            <h2>Опыт работы</h2>
 
-        <div>
-            <Label for="message">Ваше сообщение:</Label>
-            <br>
-           <textarea id="message" cols="30" rows="10" placeholder="Введите сообщение ..."></textarea>
+            <table class="table">
+                <!-- <thead>
+                    <tr>
+                        <th>Название</th>
+                        <th>Должность</th>
+                        <th>Год</th>
+                    </tr>
+                </thead> -->
+                <tbody>
+                    <tr>
+                        <td>БНТУ аспирантура</td>
+                        <td>Аспирант</td>
+                        <td>2000 - 2003</td>
+                    </tr>
+                    <tr>
+                        <td>БНТУ ЦНИИДСГМ</td>
+                        <td>Младший научный сотрудник</td>
+                        <td>2000 - 2003</td>
+                    </tr>
+                    <tr>
+                        <td>БНТУ ЦНИИДСГМ</td>
+                        <td>Инженер технического надзора в дорожно – мостовом строительстве </td>
+                        <td>2003 - 2008</td>
+                    </tr>
+                    <tr>
+                        <td>БНТУ</td>
+                        <td>Преподаватель каф. «Проектирования дорог» (программный модуль Credo).</td>
+                        <td>2000 - 2004</td>
+                    </tr>
+                    <tr>
+                        <td>УДМС и Б Мингорисполкома</td>
+                        <td>Главный технолог</td>
+                        <td>2004 - 2005</td>
+                    </tr>
+                    <tr>
+                        <td>ООО "ПроплексБел"</td>
+                        <td>Зам. дир. по комерчиским вопросам</td>
+                        <td>2005 - 2006</td>
+                    </tr>
+                    <tr>
+                        <td>ООО "Систехпром"</td>
+                        <td>Зам. дир. по комерчиским вопросам</td>
+                        <td>2006 - 2009</td>
+                    </tr>
+                    <tr>
+                        <td>ОАО "ДСТ - 2 г.Гомель"</td>
+                        <td>Начальник проектносметного отдела</td>
+                        <td>2010 - 2014</td>
+                    </tr>
+                    <tr>
+                        <td>ГДСК</td>
+                        <td>Зам. директора по производству</td>
+                        <td>2015 - 2016</td>
+                    </tr>
+                    <tr>
+                        <td>КПРСУП Добрушское ДРСУ-150</td>
+                        <td>Главный инженер</td>
+                        <td>2016 - сейчас</td>
+                    </tr>
+
+                </tbody>
+            </table>
         </div>
 
-        <br>
 
-        <button type="submit">Отправить!</button>
-        
-    </form>
+        <form class="form">
 
+            <h2>Связаться со мной</h2>
+
+            <div class="form-row">
+
+                <div class="form-group">
+                    <label for="name">Ваше имя:</label>
+                    <input type="text" id="name" placeholder="Введите имя">
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Ваш email:</label>
+                    <input type="email" id="email" placeholder="Введите email">
+                </div>
+
+            </div>
+            
+            <div class="form-group">
+                <Label for="message">Ваше сообщение:</Label>
+                <textarea id="message" cols="30" rows="10" placeholder="Введите сообщение ..."></textarea>
+            </div>
+
+            <button class="btn" type="submit">Отправить!</button>
+
+        </form>
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
 
 
